modified some files which are not in use, and passed custom components

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png" />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
+  <link href="./style.css" rel="stylesheet" />
   <title>Proflyl</title>
   <style>
     html,
